[package]
name = "minecraft-mod-syncer"
authors = ["almafa64"]
repository = "https://github.com/almafa64/minecraft-mod-syncer"
version = "0.1.0"
edition = "2024"

[dependencies]
fltk = { version = "1.5.9", features = ['no-pango'] }
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ['json', 'stream'] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs", "sync", "io-util"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
lazy_static = "1.5.0"
futures-util = "0.3.31"
zip = { version = "4.2.0", default-features = false, features = ["time", "deflate"]}
